--- a/NatureOfCode/NatureOfCode.csproj
+++ b/NatureOfCode/NatureOfCode.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Air.cs" />
+    <Compile Include="Attractor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,8 +59,15 @@
     <Compile Include="Introduction\WalkerToRight.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Space.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Space.Designer.cs">
+      <DependentUpon>Space.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vectors\SimpleBall.cs" />
     <Compile Include="Vectors\Vector.cs" />
+    <Compile Include="Water.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -71,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Space.resx">
+      <DependentUpon>Space.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
